# cria-crewai-indexstore

./: README.md
cria_crew/: .env.example  .gitignore  README.md  pyproject.toml  report.md  report2.md  report_20250726_154912.md  setup_jira_index.py  test_jira_search.py
cria_crew/notebooks/: create_codebase_index.ipynb  create_jira_indexes.ipynb  vertexai_setup.ipynb
cria_crew/output/: report_20250726_154410.md
cria_crew/scripts/: clients.py  codebase_coco.py  load_confluence.py  load_jira.py  sync_confluence_docs.py  sync_jira.py
cria_crew/src/cria_crew/: crew.py  gradio.py  main.py
cria_crew/src/cria_crew/config/: agents.yaml  tasks.yaml
cria_crew/src/cria_crew/data_models/: schema.py
cria_crew/src/cria_crew/tools/: confluence_rag_tool.py  custom_tool.py  file_writer.py  jira_rag_tool.py
cria_crew/src/cria_crew/tools/utils/: __init__.py  clarifier_agent.py  data_model.py  vector_store.py
