[project]
name = "cria_crew"
version = "0.1.0"
description = "cria_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0",
    "pinecone>=5.0.0",
    "google-cloud-aiplatform>=1.38.0",
    "vertexai>=1.38.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
cria_crew = "cria_crew.main:run"
run_crew = "cria_crew.main:run"
train = "cria_crew.main:train"
replay = "cria_crew.main:replay"
test = "cria_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
]
