[project]
name = "cria_crew"
version = "0.1.0"
description = "cria_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "pinecone>=5.0.0",
    "google-cloud-aiplatform>=1.38.0",
    "vertexai>=1.38.0",
    "python-dotenv>=1.0.0",
    "dotenv>=0.9.9",
    "psycopg[pool]>=3.2.9",
    "sentence-transformers>=5.0.0",
    "panel>=1.7.5",
    "crewai>=0.150.0",
    "openlit>=1.34.35",
    "langfuse>=3.2.1",
]

[project.scripts]
cria_crew = "cria_crew.main:run"
run_crew = "cria_crew.main:run"
train = "cria_crew.main:train"
replay = "cria_crew.main:replay"
test = "cria_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "cocoindex",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "pg8000>=1.31.4",
    "pgvector",
]
